exit 0 to ignore unknown pip install error

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,7 +6,7 @@ ENV FLASK_RUN_HOST=0.0.0.0
 RUN apt-get update
 RUN apt-get install mysql-client -y
 RUN apt-get install libmysqlclient-dev mysql-server -y
-RUN apt-get install pip -y
+RUN apt-get install pip -y; exit 0
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 EXPOSE 5000
