--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,28 @@
 events {}
 http {
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     upstream wsgi_app {
         server 172.18.1.2:5000;
+    }
+
+    upstream websocket_protocol {
+        server 172.18.1.2:8765;
+    }
+
+    server {
+        listen 8765;
+        location / {
+            proxy_pass http://websocket_protocol;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+        }
     }
 
     server {
