--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,19 @@ services:
   web:
     build: ./HamstringRestrainingApp
     ports:
-      - "5000:9000"
+      - "5000:5000"
     environment:
       host: 'mysql-db'
     restart: always
   
     networks:
       app_net:
-        ipv4_address: 172.18.1.2
+        ipv4_address: 172.18.2.2
   mysql-db:
     build: ./Database
     networks:
-     - app_net
+      app_net:
+        ipv4_address: 172.18.2.4
     restart: always
     ports:
       # <Port exposed> : < MySQL Port running inside container>
@@ -48,7 +49,7 @@ services:
       - nginx:/var/lib/nginx
     networks:
       app_net:
-        ipv4_address: 172.18.1.3
+        ipv4_address: 172.18.2.3
   # Names our volume
 volumes:
   my-db:
