--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       host: 'mysql-db'
     restart: always
-  
+    depends_on:
+      - "mysql-db"
     networks:
       app_net:
         ipv4_address: 172.18.2.2
