--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,22 @@ http {
         server 172.18.2.2:5000;
     }
 
+    upstream merchant_protocol {
+        server 172.18.2.2:10500;
+    }
+
+    server {
+        listen 10500;
+        location / {
+            proxy_pass http://merchant_protocol;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+        }
+    }
+
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
